<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.forLoans.DialogForPrivacyFragment">

    <LinearLayout
        android:id="@+id/privacy_dialog_dialog_replacement"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/white_bg"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="40dp">

        <ImageView
            android:id="@+id/privacy_dialog_app_logo_imv"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            app:srcCompat="@drawable/money_bag_icon" />

        <TextView
            android:id="@+id/privacy_dialog_app_name_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/welcome_to_nano_credit"
            android:textColor="@color/grey"
            android:textSize="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="Qualify for a loan up to $100"
            android:textColor="@color/grey"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="20dp"
                android:src="@drawable/nano_credit_data_icon"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="left"
                android:layout_gravity="center"
                android:text="@string/nano_credit_uses_the_data"
                android:textColor="@color/grey"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:padding="20dp"
                android:src="@drawable/nano_credit_data_privacy_icon"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="left"
                android:layout_gravity="center"
                android:text="@string/your_data_will_be_protected_by_strong_encryption"
                android:textColor="@color/grey"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/privacy_dialog_apply_dialog_get_started_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/button_bg_purple"
                android:text="Get Started"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>


</FrameLayout>